static/timing71.css
@keyframes appear {
  from {
    transform: translateX(120%);
  }
  to {
    transform: translateX(0);
  }
}

div#t71_flash {
  position: fixed;
  right: 6px;
  top: 6px;
  z-index: 99999;

  border: 1px solid #59ffff;
  border-radius: 0.25em;

  background-color: black;

  cursor: pointer;

  display: flex;
  flex-direction: row;
  align-items: center;

  font-family: Play, Arial, sans-serif;
  color: #59ffff;
  font-size: 12pt;
  line-height: 32px;

  padding: 8px 16px;

  animation: appear both 1s;
  animation-delay: 1s;
}

div#t71_flash:hover {
  color: black;
  background-color: #59ffff;
}

div#t71_flash > img {
  margin-right: 8px;
  width: 32px;
  height: 32px;
}

div#t71_flash span.close {
  margin-left: 16px;
  font-size: small;
}

div#t71_flash span.close:hover {
  background-color: black;
  color: #59ffff;
}

html.t71-popup {
  width: 20em;

  background-color: black;
  color: #59FFFF;
}

.t71-popup body {
  font-family: 'Play', Verdana, Arial, sans-serif;
  font-size: 12pt;
  text-align: center;
}

.t71-popup h1 {
  font-size: 14pt;
  display: flex;
  align-items: center;
  justify-content: center;
}

.t71-popup h1 img {
  margin-right: 0.5rem;
}

.t71-popup ul {
  margin: 0.25em;
  padding: 0;
}

.t71-popup li {
  list-style: none;
}

.t71-popup button {
  background-color: black;
  color: #59FFFF;
  border: 1px solid #59FFFF;
  border-radius: 0.125em;

  font-family: 'Play', Verdana, Arial, sans-serif;
  font-size: medium;

  width: 75vw;
  padding: 0.5em;
  margin-bottom: 1em;
}

.t71-popup button:hover, .t71-popup button:active {
  background-color: #59FFFF;
  color: black;
  cursor: pointer;
}

.t71-popup hr {
  border-color: #59FFFF;
}

.t71-popup .menu-footer {
  display: flex;
  justify-content: space-around;
  cursor: pointer;
}

